--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "http-status-codes": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-focus-lock": "^2.9.4",
     "react-helmet-async": "^1.3.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
@@ -74,6 +74,7 @@
     "@types/node": "^16.11.7",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.16.0",
     "@types/react-redux": "^7.1.24",
     "axios-mock-adapter": "^1.21.2",
     "eslint-config-htmlacademy": "^8.0.0",
